# drpe

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  recsysops_runbook.md  release_notes.md
src/drpe/data/: schemas.py  simulator.py
src/drpe/demo/: all.py  ranker_demo.py  run.py
src/drpe/drift/: drift.py  embedding_geometry.py
src/drpe/embeddings/: io.py  versioning.py
src/drpe/evaluation/: metrics.py
src/drpe/models/: ranker.py  ranker_io.py  two_tower.py
src/drpe/recsysops/: __init__.py  cold_start.py  incident_schema.py  integration.py  ramp_integration.py  trace_integration.py  trace_sampler.py
src/drpe/reporting/: export.py  model_card.py
src/drpe/rollout/: guardrails.py  ranker_rollout.py  rollout_from_artifacts.py  rollout_report.py  rollout_simulation.py
src/drpe/training/: dataset.py  train_ranker.py  train_two_tower.py
tests/: test_cohort_embedding_guardrail.py  test_drift_and_guardrails.py  test_embedding_geometry_drift.py  test_model_card_render.py  test_ranker_demo_modes.py  test_ranker_io.py  test_ranker_rollout_smoke.py  test_ranker_smoke.py  test_rollout_from_artifacts_smoke.py  test_rollout_report.py  test_rollout_report_embedding_guardrail.py  test_rollout_simulation.py  test_simulation_with_embeddings.py  test_simulator_smoke.py  test_two_tower_training_smoke.py
